| Bug #5156 | Views: ORDER BY with ordinal leads to error | ||
|---|---|---|---|
| Submitted: | 23 Aug 2004 1:34 | Modified: | 6 Sep 2004 13:48 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.2-alpha-debug | OS: | Linux (SuSE 8.2) |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[23 Aug 2004 1:34]
Peter Gulutzan
[31 Aug 2004 11:00]
Oleksandr Byelkin
ChangeSet 1.1740 04/08/31 11:58:45 bell@sanja.is.com.ua +7 -0 ORDER clause printing fixed (BUG#5156)
[6 Sep 2004 13:48]
Oleksandr Byelkin
Thank you for bugreport! Bugfix for this bug is pushed into our source repository.
