ORDER clause printing fixed (BUG#5156)

mysql-test/r/subselect.result:
  ORDER clause printing fixed
mysql-test/r/view.result:
  order by refers on integer field
mysql-test/t/view.test:
  order by refers on integer field
sql/sql_lex.cc:
  ORDER clause printing fixed
sql/sql_parse.cc:
  fields for correct ORDER printing added
sql/sql_select.cc:
  fields for correct ORDER printing added
sql/table.h:
  fields for correct ORDER printing added